# conebot-rust

./: .gitignore  Cargo.toml  README.md  build.rs  database-design.json  database-design.jsonc
.github/workflows/: test.yml
conebot_proc_macro/: Cargo.toml
conebot_rust/: Cargo.toml
conebot_rust/src/: event_handler.rs  main.rs
conebot_rust/src/commands/: give.rs  take.rs  test1.rs
conebot_rust/src/commands/currency/: delete.rs
conebot_rust/src/commands/currency/config/: list.rs
conebot_rust/src/db/models/: currency.rs  global.rs
conebot_rust/src/db/models/global/: currency.rs  value.rs
src/: commands.rs  event_handler.rs  macros.rs  main.rs
src/commands/: balance.rs  buy.rs  currency.rs  give.rs  inv.rs  mod.rs  ping.rs  sell.rs  take.rs  test1.rs  use_item.rs
src/commands/config/: mod.rs
src/commands/config/currency/: create.rs  delete.rs  edit.rs  edit_list.rs  list.rs  mod.rs
src/commands/config/drop_table/: add_entry.rs  delete.rs  delete_entry.rs  mod.rs  view_table.rs
src/commands/config/item/: create.rs  delete.rs  edit.rs  list.rs  mod.rs
src/commands/config_currency/: delete.rs  edit.rs  edit_list.rs  list.rs  mod.rs
src/commands/config_drop_table/: create.rs  delete.rs  mod.rs  view_table.rs
src/commands/config_item/: create.rs  edit.rs  list.rs  mod.rs
src/commands/config_store/: create_entry.rs  delete_entry.rs  edit_entry.rs  mod.rs
src/commands/currency/: create.rs  delete.rs  exchange.rs  give.rs  mod.rs
src/commands/currency/config/: edit.rs  edit_list.rs  list.rs  mod.rs
src/commands/give/: currency.rs  item.rs  mod.rs
src/commands/item/: create.rs
src/db/: id.rs  mod.rs  models.rs  uniques.rs
src/db/models/: balances.rs  currency.rs  drop_table.rs  global.rs  inventory.rs  item.rs  multipliers.rs  role_rewards.rs  store.rs  store_entry.rs
src/db/models/currency/: builder.rs  currency_builder.rs  name_updates_handler.rs
src/db/models/drop_table/: builder.rs
src/db/models/global/: global_balance.rs  global_participating_guild.rs  participating_guild.rs
src/db/models/item/: builder.rs  fieldless.rs  name_updates_handler.rs
src/event_handler/: command_handler.rs  message.rs
src/mechanics/: drop_generator.rs  exchange.rs  item_action_handler.rs  mod.rs
src/util/: currency.rs  mod.rs  paginator.rs  user.rs
