[package]
name = "conebot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.183", features = ["derive"] }
serde_json = "^1.0.104"
serde_with = { version = "^3.2.0", features = ["chrono_0_4"] }
dotenv = "^0.15.0"
tokio = { version = "^1.31.0", features = [
    "full",
    "macros",
    "rt-multi-thread",
] }
chrono = { version = "^0.4.26", features = ["serde"] }
futures = "^0.3.28"
lazy_static = "^1.4.0"
once_cell = "1.18.0"
async_once = "^0.2.6"
uuid = { version = "^1.4.1", features = ["serde", "v4"] }
lru = "^0.11.0"
anyhow = "^1.0.72"
thiserror = "^1.0.44"
parking_lot = "^0.12.1"
lock_api = "^0.4.10"
tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }
mongodb = { version = "2.6.0", features = [
    "bson-chrono-0_4",
    "bson-serde_with",
    "bson-uuid-1",
] }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "collector",
    "chrono",
]
git = "https://github.com/serenity-rs/serenity"

# test dependencies
[dev-dependencies]
rand = "^0.8.5"


[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
