[package]
name = "conebot-rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.190", features = ["derive"] }
serde_json = "^1.0.108"
serde_with = { version = "^3.4.0", features = ["chrono_0_4"] }
dotenv = "^0.15.0"
tokio = { version = "^1.33.0", features = [
    "full",
    "macros",
    "rt-multi-thread",
] }
chrono = { version = "^0.4.31", features = ["serde"] }
futures = "^0.3.29"
lazy_static = "^1.4.0"
once_cell = "^1.18.0"
async_once = "^0.2.6"
uuid = { version = "^1.5.0", features = ["serde", "v4"] }
lru = "^0.12.0"
anyhow = "^1.0.75"
thiserror = "^1.0.50"
parking_lot = "^0.12.1"
lock_api = "^0.4.11"
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }
mongodb = { version = "^2.7.0", features = [
    "bson-chrono-0_4",
    "bson-serde_with",
    "bson-uuid-1",
] }
rand = "^0.8.5"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "collector",
    "chrono",
]
git = "https://github.com/serenity-rs/serenity"


[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false
